--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -351,7 +351,7 @@ layout: compress
 </div>
 <div style="margin-top: 0.8rem;">
   <p><strong>Title:</strong> AI-Driven Opinion Propagation on Twitter during the COVID-19 Vaccine Rollout</p>
-  <p><strong>Research Type:</strong> Sentiment Analysis</p>
+  <p><strong>Project Type:</strong> Sentiment Analysis</p>
 </div>
 </div>
 
