--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -247,7 +247,11 @@ layout: compress
       <img src="https://avatars.githubusercontent.com/u/225464808?s=400&u=ae925ec37e6c6d11e9ad1cd4f2fc32cf90d4c041&v=4" alt="Dr. Farrukh Aziz" class="profile-pic" />
 
       <h1>Dr. Farrukh Aziz</h1>
-      <h2>PhD Researcher | AI, Behavioral Science & Eng.Management Specialist</h2>
+<h2>PhD Researcher | AI, Behavioral Science & Engineering Management Specialist</h2>
+<h3 style="color:#005f99; font-weight:600; margin-top:0.3rem;">
+  AI/ML | Employee & Organizational Behavior | Organizational Culture | Leadership | Anxiety & Stress | Time Pressure | Workplace Deviance
+</h3>
+
 
       <p class="intro">
   I am Dr. Farrukh Aziz, a passionate and results-driven researcher affiliated with Dalian University of Technology, China. My work lies at the cutting edge of interdisciplinary research, bridging artificial intelligence, organizational behavior, and strategic management. I specialize in exploring how AI technologies can be leveraged to enhance leadership effectiveness, optimize operational efficiencies, and drive sustainable growth in complex industrial environments.<br /><br />
